# openai-hormuz

./: .env.example  .gitignore  AGENTS.md  README.md  Taskfile.yml  docker-compose.yml
apps/hormuz-be/: AGENTS.md  Taskfile.yml  main.py  openapi.json  pyproject.toml
apps/hormuz-be/infrastructure/: config.py  di.py
apps/hormuz-be/infrastructure/health/: router.py
apps/hormuz-be/infrastructure/observability/: telemetry.py
apps/hormuz-be/modules/scan/: __init__.py
apps/hormuz-be/modules/scan/adapters/inbound/: router.py
apps/hormuz-be/modules/scan/adapters/outbound/: git_repository.py  github_pr.py
apps/hormuz-be/modules/scan/application/: fix_catalog.py  fix_generator.py  orchestrator.py  regulation_mapper.py  repositories.py  rule_catalog.py
apps/hormuz-be/modules/scan/application/prompts/: api_overexposure.md  auth_checker.md  pii_scanner.md
apps/hormuz-be/modules/scan/application/regulations/: au_privacy_act_app.json  gdpr.json
apps/hormuz-be/modules/scan/application/scanners/: __init__.py  api_auditor.py  auth_checker.py  base.py  pattern.py  pii_scanner.py
apps/hormuz-be/modules/scan/domain/: entities.py  errors.py  ports.py
apps/hormuz-be/modules/shared/: aggregate_root.py  domain_event.py  event_bus.py
apps/hormuz-be/scripts/: dump_openapi.py
apps/hormuz-be/tests/infrastructure/: test_config.py  test_runtime_dependencies.py
apps/hormuz-be/tests/modules/scan/: test_git_repository.py  test_orchestrator.py  test_scan_socket.py
demo_repo/: README.md  auth.py  config.py  email_service.py  middleware.py  models.py
docs/: project-context.md
(+60 files in other folders)
